# project-euler-solutions

./: README.md
solutions/0003/: LargestPrimeFactor.hs  Main.hs
solutions/0006/: Main.hs  SumSquareDifference.hs
solutions/0008/: LargestProductInSeries.hs  Main.hs
solutions/0013/: LargeSum.hs  Main.hs
solutions/0016/: Main.hs  PowerDigitSum.hs  run.sh
solutions/0020/: FactorialDigitSum.cabal
solutions/0020/app/: Main.hs
solutions/0020/src/Euler/: FactorialDigitSum.hs
solutions/0029/: DistinctPowers.cabal
solutions/0029/app/: Main.hs
solutions/0029/src/Euler/: DistinctPowers.hs
solutions/0040/: Champernowne.hs  Main  Main.hs  link
solutions/0048/: Main.hs  SelfPowers.hs  link
solutions/0092/: Main.hs  SquareDigitChains.hs  link
