name:                DistinctPowers
version:             0.1.0
synopsis:            A solution to a Project Euler problem.
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Euler.DistinctPowers
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable DistinctPowers
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parallel >= 3.2.1.0
                     , DistinctPowers
  default-language:    Haskell2010
